refactor(auth/user): extract JWT generation into auth package and add jwt to register
