# internal/handler/dto/register_response.go
@@ -1,0 +1,6 @@
+package dto
+
+type RegisterResponse struct {
+	Token string       `json:"token"`
+	User  UserResponse `json:"user"`
+}
